debugging updateprice function

--- a/solution-hw6/detail.html
+++ b/solution-hw6/detail.html
@@ -32,7 +32,7 @@
 
   <div class="photo">
     <!-- Dynamically set the image depending on product -->
-    <img class="prod" id="rollImage" width="600" height="600" alt="cinamon roll"/>
+    <img class="prod" id="rollImage" width="600" height="600" alt="cinnamon roll"/>
 
     <div class="details">
         <div>
