--- a/solution-hw6/detail.html
+++ b/solution-hw6/detail.html
@@ -48,7 +48,7 @@
         
         <h3 class="photo"> 
             <p>Total Price: <span id="price">$0.00</span></p>
-            <span id="button" onclick="addToCart()">Add to Cart</span>
+            <button id="addToCartButton" onclick="addToCart()">Add to Cart</button>
         </h3>
         
     </div>
