--- a/solution-hw6/cart.html
+++ b/solution-hw6/cart.html
@@ -32,9 +32,7 @@
     </div>
 
     <div id="cart-container">
-        <ul id="cartList"> <!-- This is the missing cartList element -->
-            <!-- Cart items will be added here dynamically -->
-        </ul>
+        <ul id="cartList"></ul>
     </div>
 
     <div class="end">
