--- a/solution-hw6/cart.html
+++ b/solution-hw6/cart.html
@@ -41,12 +41,7 @@
         </div>
 
         <h4 class="priceline">
-            <div>
-                Total: 
-            </div>
-
-            <div id="totalPrice">
-            </div>
+            <div id="totalPrice">Total: $0.00</div>
         </h4>
 
         <div class="new">
