--- a/solution-hw6/cart.html
+++ b/solution-hw6/cart.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="rollsData.js" type="text/javascript"></script>
     <script src="combined.js" type="text/javascript" defer></script>
     <title>Cart</title>
 </head>
@@ -41,7 +40,9 @@
         </div>
 
         <h4 class="priceline">
-            <div id="totalPrice">Total: $0.00</div>
+            <div>
+                <div id="totalPrice">Total: $0.00</div>
+            </div>
         </h4>
 
         <div class="new">
