--- a/solution-hw6/cart.html
+++ b/solution-hw6/cart.html
@@ -26,11 +26,10 @@
             <h3 class="pagetitle">
                 Shopping Cart
             </h3>
-            
         </div>
     </div>
 
-    <div id="cart-container">
+    <div id="cart-list">
         <ul id="cartList"></ul>
     </div>
 
